--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       sizes="32x32" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap&effect=outline"
       rel="stylesheet">
     <title>JMAX</title>
   </head>
