main page in progress and navigation bar is partially implemented, moved Logo Splash from main page to about page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,14 +9,19 @@
       sizes="32x32" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap&effect=outline"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Rakkas&display=swap"
+      rel="stylesheet">
+    <link
+      href="https://db.onlinewebfonts.com/c/12a61a1f47fbe7a8656996d5de888ca9?
+      family=Sporty+Pro+Shadow+Inline+XP"
       rel="stylesheet">
     <title>JMAX</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <h1>Hello From Root</h1>
+      <h1>Hello From JMAX</h1>
     </div>
   </body>
 </html>
