--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Rakkas&display=swap"
+      href="https://fonts.googleapis.com/css2?
+      family=Bungee+Spice&family=Rakkas&display=swap"
       rel="stylesheet">
     <link
       href="https://db.onlinewebfonts.com/c/12a61a1f47fbe7a8656996d5de888ca9?
@@ -21,7 +22,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <h1>Hello From JMAX</h1>
     </div>
   </body>
 </html>
