Frontend in progress

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
       href="https://db.onlinewebfonts.com/c/12a61a1f47fbe7a8656996d5de888ca9?
       family=Sporty+Pro+Shadow+Inline+XP"
       rel="stylesheet">
-    <title>JMAX</title>
+    <title>Problem Solver</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
